--- a/css/style.css
+++ b/css/style.css
@@ -22,14 +22,15 @@ body {
 .landing-page {
     position: relative;
     overflow: hidden;
-    height: 39.8rem;
+    height: 70vh;
+    min-height:500px;
 }
 .landing-page:before {
     content: "";
     width: 100%;
     height: 100%;
     position: absolute;
-    background: #1B2030 url(https://i2.wp.com/www.davidchristopherassoc.com/wp-content/uploads/2014/06/bluffview_dallas_homes.jpg?fit=1600%2C750&ssl=1) top center no-repeat;
+    background: #1B2030 url("../img/hero.jpg") top center no-repeat;
     background-size: cover;
     animation: zoom-in 30s linear 10ms infinite;
     z-index: -1
@@ -81,7 +82,8 @@ span {
 /********************************* START NAV-LEFT ********************************/
 
 .nav {
-    height: 39.8rem;
+    height: 70vh;
+    min-height:500px;
     background: #333;
     opacity: .9;
     position: absolute;
@@ -215,8 +217,8 @@ header h1 {
     width: 100%;
     background: #333;
     opacity: .9;
-    position: absolute;
-    height: 50px;
+   
+   
     line-height: 50px;
     background: linear-gradient(#f50045, #f50049);
 }
@@ -281,9 +283,15 @@ hr {
     position: relative;
     z-index: 1;
 }
+
+.example-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content:center;
+    
+}
 .example {
-    display: inline-flex;
-    justify-content: center;
+    max-width:500px;
 }
 .example img {
     width: 100%;
